<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ShareDot</string>
    <string name="tab_recipe">Recipe</string>
    <string name="tab_order">Order</string>
    <string name="tab_me">Me</string>
    <string name="recipe_detail">Recipe detail tab</string>
    <string name="title_activity_login">Sign in</string>
    <string name="cart_pop_up_title">CART</string>

    <!-- Strings related to login activity -->
    <string name="please_login_first">Please login first!</string>
    <string name="login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_verify_code">Verify Code</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg_login_user_not_exist">the user is not exist!</string>

    <!-- string related to login and register tabs -->
    <string name="app_short_description">faster, and healthier platform</string>
    <string name="forget_password">forgot password?</string>
    <string name="register">register</string>
    <string name="get_verify_code">verify</string>
    <string name="msg_verify_code_sent">send verify code succeed!</string>
    <string name="msg_register_succeed">register succeed!</string>
    <string name="msg_account_registered">the account is already registered!</string>
    <string name="msg_verify_code_error">the verify code is not match!</string>
    <string name="msg_account_null">the account field is required!</string>
    <string name="msg_name_invalid">name is invalid!</string>

    <!-- msg string related to recipe fragment -->
    <string name="msg_recipe_no_more">Here is the bottom! No more recipes!</string>
    <string name="msg_recipe_nothing">Nothing to Show!</string>
    <string name="msg_cannot_access_shop_list">Can not access the shop address!</string>
    <string name="msg_cannot_access_type_list">Can not access the recipe types!</string>

    <string name="recipe_shop_addr_all">All shops</string>
    <string name="recipe_type_all">All category</string>
    <string name="recipe_order_by_default">Default</string>
    <string name="recipe_order_by_sales">Sales</string>
    <string name="recipe_order_by_score">Score</string>
    <string name="recipe_order_by_price">Price</string>

    <!-- string related to recipe detail activity -->
    <string name="add_to_cart">add to cart</string>
    <string name="tv_sales">sold</string>
    <string name="msg_comment_no_more">No more comments!</string>
    <string name="msg_comment_nothing">There is still no comments!</string>
    <string name="tv_comment_load_more">LOAD MORE</string>

    <!-- string related to cart activity -->
    <string name="cart_order">order</string>
    <string name="login_to_order">Please login before order!</string>

    <!-- string related to order activity -->
    <string name="order_recipe_price">Price</string>
    <string name="order_recipe_copies">Copies</string>
    <string name="prompt_receiver_name">Name</string>
    <string name="prompt_receiver_phone">Phone</string>
    <string name="prompt_receiver_addr">Address</string>
    <string name="prompt_receive_time">Receive time</string>
    <string name="prompt_input_receive_time">Input receive time</string>
    <string name="info_please_complete_your_information">Please complete your information:</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="label_order_list_detail">Recipe List:</string>
    <string name="label_order_total_price">Total : </string>
    <string name="msg_name_null">The name is required!</string>
    <string name="msg_addr_null">The address is required!</string>
    <string name="msg_phone_null">The phone is required!</string>
    <string name="msg_receive_time_null">"You haven't select the receive time!"</string>

    <!-- me fragment string -->
    <string name="below_avatar">Touch to login</string>
    <string name="avatar_sign_up">No account?</string>
    <string name="credit">credit</string>
    <string name="logout">logout</string>

    <!-- strings for personal information editing activity -->
    <string name="editing_user_name">User Name</string>
    <string name="editing_password">Password</string>
    <string name="editing_modify">Edit</string>

    <!-- strings for order fragment -->
    <string name="order_empty">You have no orders!</string>
    <string name="order_time">Date</string>

    <!-- strings for order detail activity -->
    <string name="order_pay">Pay</string>
    <string name="order_confirm">Complete</string>
    <string name="receiver_info">"Receiver's information :"</string>
    <string name="comment_on_recipe">Comment</string>
    <string name="comment_success">Comment successfully!</string>
    <string name="msg_comment_empty">Please enter comment!</string>
    <string name="msg_rating_null">Please rate for this recipe!</string>

    <!-- standard cart action msg -->
    <string name="msg_recipe_added_to_cart">the recipe had added to cart successfully!</string>

    <!-- standard network connection msg -->
    <string name="msg_connect_error">Network Problems!</string>
    <string name="msg_time_out">network connect time out!</string>
    <string name="msg_status_header_null">techonology errors in server! the server havent set the status header!</string>
    <string name="msg_session_valid">the session is time out!</string>
    <string name="msg_unknown_ret_status">the status return from server is unrecognized!</string>
</resources>