<?xml version="1.0" encoding="utf-8"?>
<com.rey.material.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dip"
    android:background="@color/flat_peter_river"
    style="@style/spinner_item_material">


    <com.rey.material.widget.RadioButton
        android:id="@+id/rb_order_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/recipe_order_by_default"
        android:checked="true"
        style="@style/LightRadioButtonDrawable"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@drawable/line_divider_cart_item"/>

    <com.rey.material.widget.RadioButton
        android:id="@+id/rb_order_sales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/recipe_order_by_sales"
        android:checked="false"
        style="@style/LightRadioButtonDrawable"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@drawable/line_divider_cart_item"/>

    <com.rey.material.widget.RadioButton
        android:id="@+id/rb_order_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/recipe_order_by_score"
        android:checked="false"
        style="@style/LightRadioButtonDrawable"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@drawable/line_divider_cart_item"/>

    <com.rey.material.widget.RadioButton
        android:id="@+id/rb_order_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/recipe_order_by_price"
        android:checked="false"
        style="@style/LightRadioButtonDrawable"/>


</com.rey.material.widget.LinearLayout>